examples/test/testpolicy15403.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15403
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key11: value13
      key18: value13
      key29: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value9
          key35: value5
          key33: value18
